--- a/react_project/src/style/LoginPage.css
+++ b/react_project/src/style/LoginPage.css
@@ -16,7 +16,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #b5b2b2;
+  background-color: #eaf2f8;
 }
 
 .login-image {
@@ -121,4 +121,99 @@
 
 .login-footer a:hover {
   text-decoration: underline;
+}
+
+
+@media screen and (max-width: 800px) {
+  
+  .login-card{
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+  }
+  .login-image-wrapper{
+    width: 100%;
+    height: 40%;
+  }
+  .login-image-wrapper h1{
+    font-size: 1.5rem;
+  }
+  .login-image{
+    width: 50%;
+    height: 70%;
+  }
+  .login-form-wrapper{
+    height: 60%;
+  }
+  .login-form{
+    height: 100%;
+  }
+  .login-title{
+    font-size:4rem;
+  }
+  .login-subtitle{
+    font-size:2rem;
+  }
+  .form-group label{
+    font-size:1.5rem;
+  }
+  .form-group input{
+    padding:2rem;
+  }
+ /* #email{
+    padding:1rem;
+  }*/
+
+  .login-button{
+    margin-top:2rem;
+  }
+  .login-footer{
+    margin-bottom:2rem;
+    font-size: 1.5rem;
+  }
+}
+@media screen and (min-height: 840px) and (max-height: 920px) {
+.login-footer{
+  margin-bottom: 2rem;
+}
+}
+@media screen and (max-height: 920px) {
+  .login-form-wrapper{
+    padding:0.5rem;
+  }
+  .login-title{
+    font-size:2.5rem;
+  }
+  .login-subtitle{
+    font-size:1.5rem;
+  }
+  .form-group label{
+    font-size:1rem;
+  }
+  .form-group input{
+    padding:1rem;
+  }
+  /*#email{
+    padding:0.5rem;
+  }*/
+  .login-button{
+    margin:0;
+  }
+  .login-footer{
+    margin:0;
+    font-size: 1rem;
+  }
+
+}
+@media screen and (min-height: 1100px) and (max-height:1400px){
+  .login-card{
+    height:70%;
+  }
+.form-group{
+  margin-bottom:3rem;
+}
+.login-title{
+  margin-bottom: 4rem;
+  font-size:2.2rem;
+}
 }
