--- a/react_project/src/style/RegisterPage.css
+++ b/react_project/src/style/RegisterPage.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #b5b2b2;
+  background-color:  #eaf2f8;
 }
 
 .register-left img {
@@ -100,4 +100,116 @@
 .register-footer a:hover {
   text-decoration: underline;
 }
+@media screen and (min-width: 1200px){
 
+  .form-group {
+    margin-bottom: 2rem;
+  }
+
+}
+@media screen and (max-width: 800px) {
+  
+  .register-card{
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+  }
+  .register-left{
+    width: 100%;
+    height: 40%;
+  }
+  .register-left h1{
+    font-size: 1.5rem;
+  }
+  .register-left img{
+    width: 50%;
+    height: 70%;
+  }
+  .register-right{
+    height: 60%;
+  }
+  .register-form{
+    height: 100%;
+  }
+  .register-title{
+    font-size:2.5rem;
+    margin:0;
+  }
+  .form-group{
+    margin:0;
+    margin-bottom: 0.2rem;
+  }
+ 
+  .form-group label{
+    font-size:1rem;
+    margin:0;
+  }
+  .form-group input{
+    padding:1rem;
+  }
+
+  .login-button{
+    margin-top:2rem;
+  }
+  .login-footer{
+    margin-bottom:2rem;
+    font-size: 1.5rem;
+  }
+}
+@media screen and (min-height:660px) and (max-height:700px){
+.register-left{
+    width: 100%;
+    height: 35%
+  }
+  .register-right{
+    height: 65%;
+  }
+}
+@media screen and (min-height: 1000px) and (max-height:1100px){
+  .form-group{
+    margin-bottom:1rem;
+  }
+  .register-title{
+    margin-bottom: 2rem;
+    font-size:2.5rem;
+  }
+}
+@media screen and (min-height: 1100px) and (max-height:1400px){
+  .register-card{
+    height:70%;
+  }
+.form-group{
+  margin-bottom:3rem;
+}
+.register-title{
+  margin-bottom: 4rem;
+  font-size:2.2rem;
+}
+}
+@media screen and (max-height: 800px) {
+  .register-title{
+    font-size:2rem;
+    margin:0;
+  }
+  .form-group{
+    margin:0;
+    margin-bottom: 0.2rem;
+  }
+ 
+  .form-group label{
+    font-size:0.8rem;
+    margin:0;
+  }
+  .form-group input{
+    padding:0.8rem;
+  }
+
+  .login-button{
+    margin-top:0.5rem;
+  }
+  .login-footer{
+    margin-bottom:0.5rem;
+    font-size: 1.2rem;
+  }
+
+}
