--- a/react_project/src/style/Dashboard.css
+++ b/react_project/src/style/Dashboard.css
@@ -2,27 +2,44 @@
   margin:5rem 2rem 2rem 2rem;
   padding:2.5rem;
     border-radius: 2rem;
-  background-color: #eaf2f8;
+    background-color: #ffffff;
+    box-shadow: 2px 2px 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .dashboard-wrapper button{
   margin-bottom: 1.5rem;
 }
 .admin-delete{
-background-color: rgb(168, 74, 74);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap:1rem;
+  border-radius: 1rem;
+  background-color: rgb(180, 86, 86);
+  color:white;
+  padding:0.5rem 2rem;
 }
 .admin-delete:active{
   background-color: #a41b1b;
 }
 .admin-delete:focus{
-  background-color: #a41b1b;
+  background-color: rgb(140, 59, 59);
 }
 .admin-show{
-    background-color: rgb(87, 104, 167);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap:1rem;
+  border-radius: 1rem;
+  background-color: rgb(54, 77, 146);
+  border-color:rgb(54, 77, 146);
+  color:white;
+  padding:0.5rem 2rem;
   }
 
   .admin-show:hover, .admin-show:active, .admin-show:focus{
-    background-color: rgb(47, 64, 128);
+    background-color: rgb(33, 53, 114);
+    border-color:rgb(54, 77, 146);
   }
   
   
