--- a/react_project/src/style/RegisterPage.css
+++ b/react_project/src/style/RegisterPage.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color:  #eaf2f8;
+  background-color: #dfdada;
 }
 
 .register-left img {
