--- a/react_project/src/style/LoginPage.css
+++ b/react_project/src/style/LoginPage.css
@@ -16,7 +16,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #eaf2f8;
+  background-color: #dfdada;
 }
 
 .login-image {
