--- a/react_project/src/style/RegisterPage.css
+++ b/react_project/src/style/RegisterPage.css
@@ -100,6 +100,14 @@
 .register-footer a:hover {
   text-decoration: underline;
 }
+
+.label-container{
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  
+}
+
 @media screen and (min-width: 1200px){
 
   .form-group {
